--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
   border-bottom: 1px solid #f2f2f2;
 }
 .navbar h1 {
-  color: #82D53C;
+  color: #1B1B1B;
 }
 .navbar .links {
   margin-left: auto;
@@ -26,7 +26,9 @@
   padding: 6px;
 }
 .navbar a:hover {
-  color: #82D53C;
+  background-color: #1B1B1B;
+  color: #FFFFFF;
+  border-radius: 5px;
 }
 .content {
   max-width: 600px;
@@ -51,6 +53,11 @@
   text-decoration: none;
 }
 
+.contact-details {
+  text-decoration: none;
+  color: #ffffff
+}
+
 .contact-details h2 {
   font-size: 20px;
   color: #82D53C;
@@ -60,12 +67,21 @@
   margin: 20px 0;
 }
 .contact-details button {
-  background: #F42C38;
   color: #fff;
   border: 0;
   padding: 8px;
   border-radius: 8px;
   cursor: pointer;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+
+.contact-details-delete{
+  background: #F42C38;
+}
+
+.contact-details-edit {
+  background: #548bf1;
 }
 
 .create {
@@ -92,6 +108,37 @@
 }
 .create button {
   background: #82D53C;
+  color: #fff;
+  border: 0;
+  padding: 8px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.edit {
+  max-width: 400px;
+  margin: 0 auto;
+  text-align: center;
+}
+.edit label {
+  text-align: left;
+  display: block;
+}
+.edit h2 {
+  font-size: 20px;
+  color: #548bf1;
+  margin-bottom: 30px;
+}
+.edit input, .edit textarea, .edit select {
+  width: 100%;
+  padding: 6px 10px;
+  margin: 10px 0;
+  border: 1px solid #ddd;
+  box-sizing: border-box;
+  display: block;
+}
+.edit button {
+  background: #548bf1;
   color: #fff;
   border: 0;
   padding: 8px;
